hphp/hack/test/typecheck/aktuple/array_filter.php.exp
File "array_filter.php", line 9, characters 10-38:
Invalid return type (Typing[4110])
  File "array_filter.php", line 8, characters 18-28:
  Expected `vec<int>`
  File "array_filter.php", line 9, characters 23-37:
  But got `dict<int, int>`
